# Farsight-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build-contracts.js  package-lock.json  package.json
python/: main.py
src/: config.rs  main.rs  provider_manager.rs  webserver.rs
src/gen_types/: main.rs
src/handlers/: get_plain_name.rs  get_price.rs  get_registration.rs  img_gen.rs  mod.rs
src/handlers/estimate/: expiration_info.rs  mod.rs  name.rs  register_request.rs  renew_request.rs
src/types/: contract.rs  mod.rs  u256deser.rs
src/types/api/: error.rs  img_gen.rs  mod.rs  plain_name.rs  price.rs  registration.rs
src/types/api/estimate/: expiration_info.rs  mod.rs  name.rs  register.rs  renew.rs
