[package]
name = "farsight-backend"
version = "0.1.0"
edition = "2021"
default-run = "farsight-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
ethers ={version =  "0.17.0", features=["abigen"]}
log = "0.4.17"
pretty_env_logger = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"]}
toml = "*"
once_cell = "*"
base64 = "*"

[[bin]]
name = "farsight-backend"
path="src/main.rs"

[[bin]]
name = "gen_types"
path = "src/gen_types/main.rs"
