[package]
name = "farsight-backend"
version = "0.1.0"
edition = "2021"
default-run = "farsight-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
ethers ={ version = "0.17.0", features = ["abigen"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
once_cell = "1.15.0"
base64 = "0.13.0"
cached = "0.39.0"

[[bin]]
name = "farsight-backend"
path="src/main.rs"

[[bin]]
name = "gen_types"
path = "src/gen_types/main.rs"
